# games101

homework1/: CMakeLists.txt  main.cpp
homework1/include/: transform.h
homework1/src/: transform.cpp
homework2/: CMakeLists.txt  main.cpp
homework2/include/: Triangle.h  rasterizer.h
homework2/src/: rasterizer.cpp
homework3/: Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
homework4/: CMakeLists.txt  Shader.hpp  Texture.hpp  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
homework5/: CMakeLists.txt  main.cpp
homework6/: Object.hpp  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
homework7/: BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Material.hpp  Object.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
homework8/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
homework9/: rope.cpp
